<resources>
    <string name="app_name">FoodiesApp</string>
    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="hello_registration_fragment">Hello registration fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="subtitle">please sign in to your existing account?</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_btn_label">Sign In</string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="google_icon">google icon</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_switch">SIGN UP</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">Your name</string>
    <string name="create_your_new_account">create your new account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="account">Account</string>
    <string name="sign_up_btn_label">Sign Up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="welcome">Welcome, </string>
    <string name="plan_your_meal_here">plan your meal here</string>
    <string name="meal_time">50min</string>
    <string name="add_to_your_plan">Add to your plan</string>
    <string name="meal_name">Ina Garten\'s Mustard-Roasted Chicken</string>
    <string name="meal_image">meal image</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="meal_plan">Meal plan</string>
    <string name="profile">Profile</string>
    <string name="recommendations">Recommendations</string>
    <string name="meal_origin">Egypt</string>
    <string name="meal_category">vegetarian</string>
    <string name="category_image">category image</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="user">User</string>
    <string name="search_by_category">Search by category</string>
    <string name="result_name">Result name</string>
    <string name="brief_description_about_this_result_item">Brief description about this result item</string>
    <string name="description">Category</string>
    <string name="ingredients">Ingredient</string>
    <string name="egypt">Egypt</string>
    <string name="origin">Origin</string>
    <string name="cooking_steps">Cooking steps</string>
    <string name="your_weekly_plan">Your Weekly Plan</string>
    <string name="no_meals_added_this_day">No Meals Added this day</string>
    <string name="remove">Remove</string>
    <string name="backup_my_plans">Backup my plans</string>
    <string name="my_favorites">My favorites</string>
    <string name="your_favorite_meals">Your favorite meals</string>
    <string name="retrieve_backup">Retrieve Backup</string>
    <string name="about_dialog">Got it</string>
</resources>