<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/meal_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/facebook"/>

            <TextView
                style="@style/title_text_view"
                android:textSize="12sp"
                android:id="@+id/cookingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:text="@string/meal_time" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorite_icon"
                android:src="@drawable/favorite_outlined_ic"
                android:layout_gravity="end|top"
                android:layout_margin="16dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/recipeTitle_tv"
                style="@style/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meal_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeOrigin_tv"
                style="@style/subtitle_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Egypt"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addIngredientsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_to_your_plan"
                android:background="@drawable/swipe_card_button_background"
                app:icon="@drawable/baseline_password_24" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>