<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_card"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingHorizontal="8dp">

            <TextView
                android:id="@+id/meal_name"
                style="@style/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minLines="2"
                android:text="@string/meal_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/meal_origin"
                style="@style/subtitle_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/meal_origin"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/meal_category_tv"
                style="@style/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/category_label_background"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/meal_category"
                android:textColor="@color/tretiary"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>
